# halo2

./: Cargo.toml
halo2_gadgets/src/: ecc.rs  sinsemilla.rs
halo2_gadgets/src/ecc/: chip.rs
halo2_gadgets/src/ecc/chip/: add.rs  add_incomplete.rs  constants.rs  mul.rs  mul_fixed.rs  witness_point.rs
halo2_gadgets/src/ecc/chip/mul/: complete.rs  incomplete.rs  overflow.rs
halo2_gadgets/src/ecc/chip/mul_fixed/: base_field_elem.rs  full_width.rs  short.rs
halo2_gadgets/src/poseidon/: pow5.rs
halo2_gadgets/src/sinsemilla/: chip.rs  merkle.rs
halo2_proofs/examples/: circuit-layout.rs
halo2_proofs/src/: circuit.rs  dev.rs  plonk.rs
halo2_proofs/src/circuit/: layouter.rs
halo2_proofs/src/circuit/floor_planner/: single_pass.rs  v1.rs
halo2_proofs/src/dev/: cost.rs  failure.rs  util.rs
halo2_proofs/src/dev/graph/: layout.rs
halo2_proofs/src/plonk/: circuit.rs  keygen.rs  lookup.rs  prover.rs  verifier.rs
halo2_proofs/src/plonk/circuit/: compress_selectors.rs
halo2_proofs/src/plonk/lookup/: compression.rs  multiset_equality.rs  prover.rs  verifier.rs
halo2_proofs/src/plonk/lookup/multiset_equality/: prover.rs  verifier.rs
halo2_proofs/src/poly/: commitment.rs  evaluator.rs
halo2_tree/: Cargo.toml
halo2_tree/src/: main.rs  pallas_zs_and_us.rs  vesta_zs_and_us.rs
