[package]
name = "halo2_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = {version = "0.2", path = "../halo2_proofs"}
halo2_gadgets = {version = "0.2", path = "../halo2_gadgets"}

[dev-dependencies]
halo2_gadgets = { version = "0.2", path = "../halo2_gadgets", features = ["test-dependencies"] }